# vllm-ascend

csrc/: build_aclnn.sh  torch_binding.cpp  torch_binding_meta.cpp
csrc/grouped_matmul_swiglu_quant_v2/op_host/: CMakeLists.txt
csrc/moe_distribute_dispatch_v2/: INT4_SUPPORT_SUMMARY.md  MEMORY_LAYOUT.md  README.md
csrc/moe_distribute_dispatch_v2/op_api/: aclnn_moe_distribute_dispatch_v4.cpp  aclnn_moe_distribute_dispatch_v4.h
csrc/moe_distribute_dispatch_v2/op_host/: CMakeLists.txt  moe_distribute_dispatch_v2_infershape.cpp
csrc/moe_distribute_dispatch_v2/op_host/config/ascend910b/: moe_distribute_dispatch_v2_binary.json
csrc/moe_distribute_dispatch_v2/op_host/op_tiling/: moe_distribute_dispatch_v2_tiling.cpp
csrc/moe_distribute_dispatch_v2/op_kernel/: moe_distribute_dispatch_v2.h  moe_distribute_dispatch_v2_full_mesh.h  moe_distribute_dispatch_v2_tiling_key.h
csrc/moe_distribute_dispatch_v2/tests/ut/op_host/: test_moe_distribute_dispatch_v2_infershape.cpp  test_moe_distribute_dispatch_v2_tiling.cpp
vllm_ascend/attention/: sfa_v1.py
vllm_ascend/quantization/: utils.py  w4a4_dynamic.py
